# drv-rx8130ce

./: .clang-format  .gitignore  Makefile  README.md  drivercfg.yaml  drv-rx8130ce.code-workspace  makefile  mrhat-rx8130.dts  requirements.txt
.github/workflows/: release.yml
driver/: Makefile  drv-rx8130ce.code-workspace  rtc-rx8130.c  rtc-rx8130.h
mrhat-rx8130/DEBIAN/: control  postinst  postrm  preinst
origi/: rtc-rx8130.c
tools/: CMakeLists.txt  ioctl.c  rtctest.c  rtctime.c  rtctime.h
